JOP nezet hozzaadasa, kezdetleges Form